Скрипт разбит на 2 ДАГа Дампы подготовлены

--- a/Database/Dockerfile
+++ b/Database/Dockerfile
@@ -1,3 +1,7 @@
 FROM postgres:14
 
 COPY Database/init_db.sql  /docker-entrypoint-initdb.d/init_db.sql
+COPY Database/weather_2018_2021.sql  /docker-entrypoint-initdb.d/weather_2018_2021.sql
+
+COPY Database/weather_2022.sql  /docker-entrypoint-initdb.d/weather_2022.sql
+
