--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -89,6 +89,13 @@ x-airflow-common:
       condition: service_healthy
 
 services:
+  selenium:
+    container_name: remote_chromedriver
+    image: seleniarm/standalone-chromium:latest
+    ports:
+      - 4444:4444
+    restart: always
+
   postgres:
     image: postgres:13
     environment:
