Отладка доступа к БД

--- a/Database/Dockerfile
+++ b/Database/Dockerfile
@@ -1,7 +1,6 @@
 FROM postgres:14
 
-COPY Database/init_db.sql  /docker-entrypoint-initdb.d/init_db.sql
-COPY Database/weather_2018_2021.sql  /docker-entrypoint-initdb.d/weather_2018_2021.sql
-
-COPY Database/weather_2022.sql  /docker-entrypoint-initdb.d/weather_2022.sql
+COPY Database/0_init_db.sql  /docker-entrypoint-initdb.d/0_init_db.sql
+COPY Database/1_aircraft_incidents.sql  /docker-entrypoint-initdb.d/1_aircraft_incidents.sql
+COPY Database/2_weather_observation.sql  /docker-entrypoint-initdb.d/2_weather_observation.sql
 
