--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,6 +53,7 @@ x-airflow-common:
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.1}
   build:
     dockerfile: Dockerfile
+  working_dir: /opt/airflow
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -74,12 +75,13 @@ x-airflow-common:
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- selenium}
+    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- selenium openpyxl}
   volumes:
     - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - ${AIRFLOW_PROJ_DIR:-.}/Downloads:/opt/airflow/Downloads
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -92,9 +94,12 @@ services:
   selenium:
     container_name: remote_chromedriver
     image: seleniarm/standalone-chromium:latest
+    working_dir: /home/seluser/Downloads
     ports:
       - 4444:4444
     restart: always
+    volumes:
+      - ${AIRFLOW_PROJ_DIR:-.}/Downloads:/home/seluser/Downloads
 
   postgres:
     image: postgres:13
@@ -152,6 +157,7 @@ services:
       retries: 5
       start_period: 30s
     restart: always
+    working_dir: /opt/airflow
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -167,6 +173,7 @@ services:
       retries: 5
       start_period: 30s
     restart: always
+    working_dir: /opt/airflow
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -189,6 +196,7 @@ services:
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
       DUMB_INIT_SETSID: "0"
     restart: always
+    working_dir: /opt/airflow
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -275,6 +283,8 @@ services:
         mkdir -p /sources/logs /sources/dags /sources/plugins
         chown -R "${AIRFLOW_UID}:0" /sources/{logs,dags,plugins}
         exec /entrypoint airflow version
+        chmod 777 /opt/airflow
+        chmod 777 /opt/airflow/Downloads
     # yamllint enable rule:line-length
     environment:
       <<: *airflow-common-env
