--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ async-timeout==4.0.3
 attrs==23.1.0
 Babel==2.12.1
 backoff==2.2.1
-beautifulsoup4==4.12.2
+beautifulsoup4~=4.11.1
 blinker==1.6.2
 cachelib==0.9.0
 cattrs==23.1.2
@@ -79,7 +79,7 @@ marshmallow-sqlalchemy==0.26.1
 mdit-py-plugins==0.4.0
 mdurl==0.1.2
 multidict==6.0.4
-numpy==1.24.4
+numpy~=1.26.0
 opentelemetry-api==1.20.0
 opentelemetry-exporter-otlp==1.20.0
 opentelemetry-exporter-otlp-proto-common==1.20.0
@@ -91,7 +91,7 @@ opentelemetry-semantic-conventions==0.41b0
 ordered-set==4.1.0
 outcome==1.2.0
 packaging==23.1
-pandas==2.0.3
+pandas~=2.1.1
 pathspec==0.11.2
 pendulum==2.1.2
 pkgutil_resolve_name==1.3.10
@@ -119,3 +119,6 @@ Werkzeug==2.2.3
 wrapt==1.15.0
 wsproto==1.2.0
 WTForms==3.0.1
+
+requests~=2.28.1
+psycopg2~=2.9.5
